# WhirDetective

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
schemas/: edgeos_model_manifest.schema.json
src/whirdetective/: __init__.py
src/whirdetective/cli/: __init__.py  edgeos_export.py  runner.py  runtime_freeze.py  staging_canary.py  step4_signoff.py  tflite_convert.py
src/whirdetective/data/: __init__.py  benchmarks.py  contracts.py  engine.py  labeling.py  pipeline.py  splitting.py  standardize.py  versioning.py
src/whirdetective/domain/: __init__.py  models.py
src/whirdetective/evaluation/: __init__.py  kpi.py  metrics.py  model_card.py
src/whirdetective/export/: __init__.py  edgeos_contract.py  manifest.py  model_package.py  release_gate.py  verification.py
src/whirdetective/integration/: __init__.py  bootctrl_contracts.py  intake_guard.py
src/whirdetective/ml/: __init__.py  models.py  sensor_projection.py
src/whirdetective/prognostics/: __init__.py  xjtu_baseline.py
src/whirdetective/safety/: __init__.py  contracts.py  supervisor.py
src/whirdetective/training/: __init__.py  calibration.py  datasets.py  trainer.py  workflow.py
tests/: conftest.py
tests/fixtures/bootctrl/: edge_variables.json  mqtt_metrics.json
tests/unit/: test_safety_supervisor.py
tests/unit/cli/: test_edgeos_export.py  test_runner.py  test_runtime_freeze.py  test_staging_canary.py  test_step4_signoff.py
tests/unit/data/: test_adapters.py  test_benchmarks.py  test_engine.py  test_labeling.py  test_pipeline.py  test_splitting.py  test_standardize.py  test_transforms.py  test_versioning.py  (+1 more)
(+22 files in other folders)
