[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whirdetective"
version = "0.1.0"
description = "Industrial-grade bearing fault monitoring with deterministic safety supervision"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "WhirDetective Contributors"}
]
license = {text = "MIT"}
keywords = ["industrial-iot", "predictive-maintenance", "safety", "bearing-fault"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "torch>=2.2",
]

[project.scripts]
whirdetective-runner = "whirdetective.cli.runner:main"
whirdetective-signoff = "whirdetective.cli.signoff:main"
whirdetective-runtime-freeze = "whirdetective.cli.runtime_freeze:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.6",
    "mypy>=1.8",
]
data = [
    "gdown>=5.2",
    "rarfile>=4.2",
    "libarchive-c>=5.3",
    "scipy>=1.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_unreachable = true
